<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".Login">

    <EditText
        android:id="@+id/et_usrname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:textSize="20dp"
        android:background="@drawable/input"
        android:textColor="#D699FF"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/icon_usrname"
        android:singleLine="true"
        android:hint="Username" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/et_usrname"
        android:background="@drawable/input"
        android:textColor="#D699FF"
        android:inputType="textPassword"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/icon_pwd"
        android:textSize="20dp"
        android:hint="Password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shaved_btn2"
        android:layout_below="@+id/et_pwd"
        android:layout_marginTop="30dp"
        android:text="SIGN IN"
        android:textSize="25dp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/response_buffer_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:textSize="0dp"
        android:text="" />

</RelativeLayout>