<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:textSize="25dp"
        android:text="Please log in to enter" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Main_title"
        android:background="@drawable/shaved_btn2"
        android:textColor="#FFFFFF"
        android:text="Log in"
        android:textSize="25dp"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="30dp"
        android:textSize="15dp"
        android:text="Sign up" />

    <TextView
        android:id="@+id/response_buffer_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:textSize="0dp"
        android:text="" />

</RelativeLayout>